--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "debug": "~2.6.9",
     "devexpress-richedit": "^20.2.3",
     "devextreme": "^20.2.3",
+    "device-detector-js": "^2.2.7",
+    "device-uuid": "^1.0.4",
     "ejs": "^3.1.3",
     "eml-format": "^0.6.1",
     "express": "4.17.1",
@@ -28,6 +30,7 @@
     "mssql": "^6.2.3",
     "mssql-session-store": "^1.0.0",
     "multer": "^1.4.2",
+    "node-device-detector": "^1.3.2",
     "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
