--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "devexpress-richedit": "^20.2.3",
     "devextreme": "^20.2.3",
@@ -21,6 +20,7 @@
     "express": "4.17.1",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
+    "getmac": "^5.17.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsdom": "^16.4.0",
@@ -31,6 +31,7 @@
     "mssql-session-store": "^1.0.0",
     "multer": "^1.4.2",
     "node-device-detector": "^1.3.2",
+    "node-macaddress": "^0.2.4",
     "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
